package Employee;

public class Cashier extends Employee{
    public Cashier(String name) {
        super(name);
    }
}
